--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "anubis-broker",
   "version": "0.0.1",
-  "description": "A simple websocket bridge for Anubis clients.",
-  "main": "index.js",
+  "description": "A simple WebSocket bridge for Anubis clients.",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/sbekti/anubis-broker/issues"
   },
-  "homepage": "https://github.com/sbekti/anubis-broker#readme"
+  "homepage": "https://github.com/sbekti/anubis-broker#readme",
+  "dependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.7.2",
+    "express": "^4.13.4",
+    "redis": "^2.5.2",
+    "sockjs": "^0.3.15",
+    "sockjs-client": "^1.0.3"
+  }
 }
